Mapper inntektsgrunnlag selv om søker ikke er AT/FL (#3914)